<resources>
    <string name="app_name">National Library</string>
    <string name="txtBookName">Book Name...</string>
    <string name="btnSearchBook">Search</string>

    <string name="titleTextView">Title</string>
    <string name="subtitleTextView">Subtitle</string>
    <string name="authorsTextView">authors</string>
    <string name="publisherTextView">publisher</string>
    <string name="isbn10TextView">isbn10</string>

    <string name="isbn13TextView">isbn13</string>
    <string name="pagesTextView">pages</string>
    <string name="yearTextView">year</string>
    <string name="ratingTextView">rating</string>
    <string name="descTextView">desc</string>

    <string name="priceTextView">price</string>
    <string name="imageTextView">image</string>
    <string name="urlTextView">url</string>

    <string name="pageTextView">page</string>
    <string name="pageBack"><![CDATA[<]]></string>
    <string name="nextPage"><![CDATA[>]]></string>
    <string name="ofTextView">of</string>

    <string name="noBookName">No Book Name</string>
    <string name="noResults">No Results</string>
    <string name="pleaseCheckInternetConnection">Please Check INTERNET Connection</string>
</resources>