<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/detailsBookCardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:animateLayoutChanges="true"
    app:cardCornerRadius="20dp"
    app:cardElevation="4dp"
    app:cardUseCompatPadding="true">
    <LinearLayout
        android:id="@+id/imageBookLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="6dp">

            <ImageView
                android:id="@+id/bookImageView"
                android:layout_width="200dp"
                android:layout_height="300dp"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:paddingLeft="14dp"
                android:paddingRight="14dp">

            </ImageView>
        </RelativeLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/detailsBookLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="6dp"
            android:layout_marginTop="320dp">
            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="4dp"
                android:layout_marginTop="2dp"
                android:orientation="vertical"
                android:layout_marginLeft="4dp">
                <TextView
                    android:id="@+id/titleTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:text="@string/titleTextView"
                    android:textSize="24sp"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/subtitleTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:text="@string/subtitleTextView"
                    android:textSize="18sp"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/authorsTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:text="@string/authorsTextView"
                    android:textSize="18sp"
                    android:textStyle="normal"/>
                <TextView
                    android:id="@+id/publisherTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:text="@string/publisherTextView"
                    android:textSize="18sp"/>
                <TextView
                    android:id="@+id/isbn10TextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:text="@string/isbn10TextView"
                    android:textSize="18sp"/>
                <TextView
                    android:id="@+id/isbn13TextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:text="@string/isbn13TextView"
                    android:textSize="18sp"/>
                <TextView
                    android:id="@+id/pagesTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:text="@string/pagesTextView"
                    android:textSize="18sp"/>
                <TextView
                    android:id="@+id/yearTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:text="@string/yearTextView"
                    android:textSize="18sp"/>
                <TextView
                    android:id="@+id/ratingTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:text="@string/ratingTextView"
                    android:textSize="18sp"/>
                <TextView
                    android:id="@+id/descTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:text="@string/descTextView"
                    android:textSize="18sp"/>
                <TextView
                    android:id="@+id/priceTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:text="@string/priceTextView"
                    android:textSize="18sp"/>
                <TextView
                    android:id="@+id/imageTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:text="@string/imageTextView"
                    android:textSize="18sp"/>
                <TextView
                    android:id="@+id/urlTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:text="@string/urlTextView"
                    android:textSize="18sp"/>
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>
