<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cv"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:animateLayoutChanges="true"
    app:cardCornerRadius="20dp"
    app:cardElevation="4dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="6dp">

            <ImageView
                android:id="@+id/bookImageView"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:paddingLeft="14dp"
                android:paddingRight="14dp"></ImageView>
            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginStart="4dp"
                android:layout_marginTop="2dp"
                android:layout_toEndOf="@+id/bookImageView"
                android:orientation="vertical"
                android:layout_marginLeft="4dp"
                android:layout_toRightOf="@+id/bookImageView">
                <TextView
                    android:id="@+id/titleTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:text="@string/titleTextView"
                    android:textColor="@android:color/black"
                    android:textSize="24sp"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/subtitleTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:text="@string/subtitleTextView"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/isbn13TextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:text="@string/isbn13TextView"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:textStyle="normal"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayoutTwo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginStart="4dp"
                android:layout_marginTop="2dp"
                android:layout_toEndOf="@+id/linearLayout"
                android:orientation="vertical"
                android:layout_marginLeft="4dp"
                android:layout_toRightOf="@+id/linearLayout">
                <TextView
                    android:id="@+id/priceTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:text="@string/priceTextView"
                    android:textColor="@android:color/black"
                    android:textSize="24sp"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/urlTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:text="@string/urlTextView"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"/>
            </LinearLayout>

        </RelativeLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>